assets/src/sass/partials/_admin-notifications.scss
/**
 * Notifications styles
 */

body.post-type-notification {

	.notifications-section-title {
		margin-top: 2em;
	}

	#notification-boxes {

		.postbox {

			h2.hndle {
				cursor: pointer;
			}

			.switch-container {
				float: right;
				height: 36px;
				margin: auto;
				text-align: center;

				.switch {
					display: inline-block;
					font-size: 20px;
					height: 1em;
					width: 2em;
					background: #c5c5c5;
					border-radius: 1em;
					margin-top: 8px;
					margin-right: 10px;

					&.active {
						background: #7dcc4c;
					}

					input {
						display: none;

						&:checked + div {
							-webkit-transform: translate3d(100%, 0, 0);
							-moz-transform: translate3d(100%, 0, 0);
							transform: translate3d(100%, 0, 0);
						}

					}

					div {
						height: 1em;
						width: 1em;
						border-radius: 1em;
						background: #FFF;
						box-shadow: 0 0.1em 0.3em rgba(0,0,0,0.3);
						-webkit-transition: all 300ms;
						-moz-transition: all 300ms;
						transition: all 300ms;
					}

				}

			}

			.fields-repeater {
				width: 100%;
				margin-bottom: 10px;
				border-collapse: collapse;
				counter-reset: rowNumber;
				table-layout: auto;

				tr {

					&.model {
						display: none;
					}

					&:nth-child(n+3) {
						counter-increment: rowNumber;
					}

					td, th {
						padding: 12px;
						border: 1px solid #e5e5e5;
						// width: auto;

						&.handle {
							background: #f5f5f5;
							white-space: nowrap;
							width: 20px;
							text-align: center;
							padding: 0;
							color: #a5a5a5;
						}

					}

					th {

						small {
							display: block;
							font-weight: normal;
						}

					}

					td {

						&.handle::before {
							content: counter(rowNumber);
						}

					}

					&:hover {

						td.handle {

							&::before {
								content: "\f182";
								font: 400 20px/1 dashicons;
							}

							&:hover {
								color: #a00;
								cursor: pointer;
							}

						}

					}

				}

			}

			.add-new-repeater-field {
				float: right;
			}

		}

	}

}

